# clubhouse

./: meson_options.txt
data/quests_files/Inspector/: index.html
data/quests_strings/: onboardtour.csv  turtlestop.csv
eosclubhouse/: achievements.py  clubhouse.py  config.py.in  libquest.py  meson.build  metrics.py  utils.py
eosclubhouse/quests/hack2/: inspector1.py  inspector2.py  onboardtour.py
katamari/: com.hack_computer.Clubhouse.json.in
katamari/data/: config.ini.example
katamari/tools/: build-clubhouse
