option('session-bus-services-dir',
       description: 'the directory to install D-Bus services',
       type: 'string'
)

option('run-lint',
       description: 'whether to run lint on every build',
       type: 'boolean',
       value: true
)

option('eosmetrics',
       description: 'whether to use eosmetrics or not',
       type: 'boolean',
       value: true
)
